--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ pillow==11.3.0
 pytesseract==0.3.13
 sqlparse==0.5.3
 google-generativeai==0.7.2
+whitenoise==6.7.0
+gunicorn==23.0.0
+dj-database-url==2.2.0
+psycopg2-binary==2.9.9
