--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,8 @@
 {
-    "builds": [{
-        "src": "backend/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.12" }
-    }],
-    "routes": [
+    "rewrites": [
         {
-            "src": "/(.*)",
-            "dest": "backend/wsgi.py"
+            "source": "/(.*)",
+            "destination": "backend/wsgi.py"
         }
     ]
 }
